# knowledge-gardener

./: .gitignore  .mcp.json  Knowledge Gardener Master Specification.docx  README.md  pyproject.toml
.github/workflows/: weekly_analysis.yml
scripts/: weekly_run.py
snapshots/2026-06-22/: report.md  weekly_diff.md
snapshots/2026-06-28/: report.md  weekly_diff.md
snapshots/2026-07-05/: report.md  weekly_diff.md
snapshots/2026-07-12/: report.md  weekly_diff.md
snapshots/2026-07-19/: report.md  weekly_diff.md
src/knowledge_gardener/: __init__.py  cli.py  concept_clusterer.py  concept_extractor.py  concept_graph.py  content.py  differ.py  frontmatter.py  graph_builder.py  headings.py  insight_engine.py  link_parser.py  llm_enricher.py  models.py  report_writer.py  snapshotter.py  vault_reader.py  weekly_reporter.py
tests/: test_cli.py  test_concept_clusterer.py  test_concept_extractor.py  test_concept_graph.py  test_differ.py  test_insight_engine.py  test_report_writer.py  test_snapshotter.py  test_vault_reader.py
tests/fixtures/sample_vault/: protected.md
tests/fixtures/sample_vault/daily/: 2024-01-01.md
tests/fixtures/sample_vault/ideas/: scratch.md
tests/fixtures/sample_vault/learning/: deep-work.md
tests/fixtures/sample_vault/psychology/: flow-state.md
